--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ a:visited {
 
 a:hover {
 	color: #060606;
-	text-decoration: underline;
+	text-decoration: none;
 }
 
 a:active {
@@ -153,6 +153,7 @@ header {
 	line-height: 1.5;
 	text-align: center;
 	width: 300px;
+	height: 50px;
 	position: relative;
 	padding: 5px;
 	left: 0;
