--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ a:hover {
 
 a:active {
 	color: skyblue;
-	text-decoration: underline;
+	text-decoration: none;
 }
 
 p {
@@ -48,68 +48,21 @@ p {
 }
 
 h1 {
-	text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
+	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 	font-weight: normal;
 	color: #212121;
-	letter-spacing: 3pt;
+	letter-spacing: 5pt;
 	word-spacing: 6pt;
-	font-size: 24px;
+	font-size: 36px;
 	text-align: center;
 	font-family: blackfestival, sans-serif;
-	line-height: 1;
+	line-height: .5;
 }
-
-h2 {
-	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-	font-weight: normal;
-	color: #212121;
-	letter-spacing: 3pt;
-	word-spacing: 6pt;
-	font-size: 20px;
-	text-align: center;
-	font-family: helvetica, sans-serif;
-	line-height: 1;
-}
-
-h3 {
-	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-	font-weight: normal;
-	color: white;
-	letter-spacing: 3pt;
-	word-spacing: 6pt;
-	font-size: 20px;
-	text-align: center;
-	font-family: helvetica, sans-serif;
-	line-height: 1;
-}
-
 
 img {
 	width: 40px;
 	float: left;
 	object-fit: cover;
-}
-
-div.container {
-	text-align: center;
-	padding: 10px 20px;
-}
-
-
-dt {
-	display: block;
-	font-weight: bold;
-	margin-left: 0;
-	margin-right: 0;
-}
-
-dd {
-	display: block;
-	font-style: italic;
-	margin-bottom: 1em;
-	margin-left: 0;
-	margin-right: 0;
-	color: #060606;
 }
 
 header {
@@ -127,17 +80,18 @@ header {
 	font-family: blackfestival, sans-serif;
 	line-height: 1.5;
 	text-align: center;
-	width: 300px;
+	width: 50%;
 	position: relative;
 	padding: 5px;
 	left: 0;
 	z-index: 0;
 	display: block;
 	margin-top: 5px;
+	margin-bottom: 50px;
 
 }
 
-#linkC {
+.linkC {
 	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
 	box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 	border-radius: 3px;
@@ -152,14 +106,18 @@ header {
 	font-family: helvetica, sans-serif;
 	line-height: 1.5;
 	text-align: center;
-	width: 300px;
-	height: 50px;
+	width: 15%;
+	height: 10%;
 	position: relative;
 	padding: 5px;
 	left: 0;
 	z-index: 0;
 	display: block;
 	margin-top: 5px;
+}
+
+.linkC:hover {
+	border: 5px solid #FFC2E9;
 }
 
 #bottomPadding {
