--- a/style.css
+++ b/style.css
@@ -1,160 +1,350 @@
 body {
-	background-color: #212121;
-	text-align: center;
+	color: #49526F;
+	background: #1F262C;
+	font-family: cursor, monospace;
+	width: 98%;
+  min-width: 550px;
+  padding: 20px 15px;
 }
 
-.center {
-	margin: auto;
-	width: 50%;
-	border: 3px solid green;
-	padding: 10px;
-}
+::selection {
+	color: #211830;
+	background-color: #519975;
+  }
+  ::-moz-selection {
+	color: #211830;
+	background-color: #519975;
+  }
+  textarea {
+    left: -1000px;
+    position: absolute;
+  }
+  b {
+	font-weight: bold;
+	text-decoration: underline;
+  }
 
-a:link {
-	color: hotpink;
-	text-decoration: none;
-}
-
-a:visited {
-	color: hotpink;
-	text-decoration: none;
-}
-
-a:hover {
-	color: #060606;
-	text-decoration: none;
-}
-
-a:active {
-	color: skyblue;
-	text-decoration: none;
-}
-
-p {
-	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-	font-weight: normal;
-	color: #0d0d0d;
-	letter-spacing: 2pt;
-	word-spacing: 4pt;
-	font-size: 12px;
-	text-align: center;
-	font-family: helvetica, sans-serif;
-	line-height: 1.5;
-}
-
-@font-face {
-	font-family: blackfestival;
-	src: url(TheBlackFestival.ttf);
-}
-
-h1 {
-	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-	font-weight: normal;
-	color: #212121;
-	letter-spacing: 5pt;
-	word-spacing: 6pt;
-	font-size: 36px;
-	text-align: center;
-	font-family: blackfestival, sans-serif;
-	line-height: .5;
-}
-
-img {
-	width: 40px;
-	float: left;
-	object-fit: cover;
-}
-
-header {
-	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-	box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.19);
-	border-radius: 10px;
-	font-weight: normal;
-	margin-left: auto;
-	margin-right: auto;
-	letter-spacing: 2pt;
-	word-spacing: 4pt;
-	font-size: 8px;
-	background-color: white;
-	text-align: center;
-	font-family: blackfestival, sans-serif;
-	line-height: 1.5;
-	text-align: center;
-	width: 50%;
-	position: relative;
-	padding: 5px;
-	left: 0;
-	z-index: 0;
+pre{
 	display: block;
-	margin-top: 5px;
-	margin-bottom: 50px;
-
+  height: auto;
 }
 
-.linkC {
-	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-	box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.19);
-	border-radius: 3px;
-	font-weight: normal;
-	margin-left: auto;
-	margin-right: auto;
-	letter-spacing: 2pt;
-	word-spacing: 4pt;
+/* Cursor Start */
+.cursor {
 	font-size: 12px;
-	background-color: white;
-	text-align: center;
-	font-family: helvetica, sans-serif;
-	line-height: 1.5;
-	text-align: center;
-	width: 15%;
-	height: 10%;
+	color: #7F7095;
+	background-color: #1F262C;
 	position: relative;
-	padding: 5px;
-	left: 0;
-	z-index: 0;
-	display: block;
-	margin-top: 5px;
-}
-
-.linkC:hover {
-	border: 5px solid #FFC2E9;
-}
-
-#bottomPadding {
+	opacity: 1;
+	height: 1.5em;
+	width: 10px;
+	max-width: 10px;
+	transform: translateY(4px);
+	overflow: hidden;
+	text-indent: -5px;
+	display: inline-block;
+	text-decoration: blink;
+	animation: blinker 1s linear infinite;
+  }
+  @keyframes blinker {
+	50% {
+	  opacity: 0;
+	}
+  }
+  #command {
+	cursor: text;
 	height: 50px;
-}
+	color: #7F7095;
+  }
+  #liner {
+	line-height: 1.3em;
+	margin-top: -2px;
+	animation: show 0.5s ease forwards;
+	animation-delay: 1.2s;
+	opacity: 0;
+  }
+  #liner::before {
+	color: #7F7095;
+	content: "guest@knifepun.ch:~$";
+  }
+  #liner.password::before {
+	content: "Password:";
+  }
+  @keyframes show {
+	from {
+	  opacity: 0;
+	}
+	to {
+	  opacity: 1;
+	}
+  }
+  /* Cursor End */
 
-footer {
-	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	font-weight: 200;
-	background-color: white;
-	color: #0d0d0d;
-	letter-spacing: 2pt;
-	word-spacing: 4pt;
-	font-size: 12px;
-	text-align: center;
-	border-radius: 0px;
-	font-family: helvetica, sans-serif;
-	line-height: 1.5;
-	text-align: center;
+  p {
+	display: inline;
+	line-height: 1.3em;
+	margin: 0;
+	overflow: hidden;
+	white-space: nowrap;
+	margin: 0;
+	letter-spacing: 0.05em;
+	animation: typing 0.5s steps(30, end);
+  }
+  .no-animation {
+	animation: typing 0 steps(30, end);
+  }
+  .margin {
+	margin-left: 20px;
+  }
+  @keyframes typing {
+	from {
+	  width: 0;
+	}
+	to {
+	  width: 100%;
+	}
+  }
+  .index {
+	color: #DCDCCC;
+  }
+  .color2 {
+	color: #B89076;
+  }
+  .command {
+	color: #73ABAD;
+	text-shadow: 0 0 5px #73ABAD; 
+  }
+  .error {
+	color: #B89076;
+  }
+  .white {
+	color: #fff;
+  }
+  .inherit,
+  a {
+	color: #9C8394;
+  }
+  a {
+	text-decoration: inherit;
+  }
+  a:hover {
+	background: #73ABAD;
+	color: #211830;
+  }
+  a:focus {
+	outline: 0;
+  }
+
+header{
 	width: 100%;
-	bottom: 0;
-	left: 0;
 	height: 30px;
-	background-image: none;
-	background-repeat: repeat;
-	background-attachment: scroll;
-	background-position: 0% 0%;
-	position: fixed;
-
-
+	position: absolute;
+	top: 0;
+	left: 0;
+	align-items: center;
+	justify-content: space-between;
+	background: rgba(59, 73, 75, 0.4);
+	color: #D8D496;
+	backdrop-filter: blur(50px);
+	-webkit-backdrop-filter: blur(50px);
+	
 }
 
-.footer_contents {
+/* macOS shit*/
 
-	height: 30px;
-	width: 1000px;
-	margin: auto;
+*,
+html,
+body {
+  margin: 0;
+  height: 100%;
+}
 
+.menu-bar {
+  width: 100%;
+  height: 30px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: rgba(83, 83, 83, 0.4);
+  backdrop-filter: blur(50px);
+  -webkit-backdrop-filter: blur(50px);
+}
+
+  .left {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: auto;
+    margin-left: 20px;
+  }
+
+    .logo {
+      transform: scale(.6);
+    }
+    .menus {
+      height: 100%;
+      display: flex;
+      align-items: center;
+      margin-left: 20px;
+      color: rgba(255, 255, 255, 0.95);
+      font-size: 14px;
+    }
+    .active {
+      font-weight: bold;
+      color: #fff !important;
+    }
+  .right {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 380px;
+    margin-right: 20px;
+    .vol {
+      transform: scale(0.6);
+      margin-right: -10px;
+    }
+    .menu-time {
+      height: 100%;
+      width: auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
+    }
+    .menu-ico {
+      height: 100%;
+      width: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+	}
+
+      .control-center {
+        -webkit-filter: invert(100%);
+        filter: invert(100%);
+        transform: scale(0.5);
+      }
+      .siri {
+        transform: scale(0.7);
+        object-fit: fill;
+      }
+
+      i {
+        display: contents;
+        font-size: 16px;
+        color: #fff;
+      }
+    }
+
+.dock {
+	width: auto;
+	height: 60px;
+	border-radius: 16px;
+	display: flex;
+	justify-content: center;
+	position: fixed;
+	bottom: 20px;
+	left: 50%;
+	transform: translateX(-50%);
+ 
+}
+
+  .dock-container {
+    padding: 3px;
+    width: auto;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 16px;
+    background: rgba(83, 83, 83, 0.25);
+    backdrop-filter: blur(13px);
+    -webkit-backdrop-filter: blur(13px);
+    border: 1px solid rgba(255, 255, 255, 0.18);
+  }
+
+    .li-bin {
+      margin-left: 20px;
+      border-left: 1.5px solid rgba(255, 255, 255, 0.4);
+      padding: 0px 10px;
+    }
+    .li-1 {
+      &::after {
+        position: absolute;
+        width: 5px;
+        height: 5px;
+        border-radius: 50%;
+        background: rgba(255, 255, 255, 0.5);
+        content: "";
+        bottom: 2px;
+      }
+    }
+
+    li {
+      list-style: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 50px;
+      height: 50px;
+      vertical-align: bottom;
+      transition: 0.2s;
+      transform-origin: 50% 100%;
+      &:hover {
+        margin: 0px 13px 0px 13px;
+      }
+
+      .name {
+        position: absolute;
+        top: -70px;
+        background: rgba(0, 0, 0, 0.5);
+        color: rgba(255, 255, 255, 0.9);
+        height: 10px;
+        padding: 10px 15px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 5px;
+        visibility: hidden;
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: -10px;
+          width: 0;
+          height: 0;
+          backdrop-filter: blur(13px);
+          -webkit-backdrop-filter: blur(13px);
+          border-left: 10px solid transparent;
+          border-right: 10px solid transparent;
+          border-top: 10px solid rgba(0, 0, 0, 0.5);
+        }
+      }
+
+      .ico {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: 0.2s;
+      }
+      .ico-bin {
+        width: 94% !important;
+        height: 94% !important;
+        object-fit: cover;
+        transition: 0.2s;
+
+        &:hover {
+          margin-left: 10px;
+        }
+      }
+    }
+
+@for $i from 1 through 15 {
+  .li-#{$i}:hover {
+    .name {
+      visibility: visible !important;
+    }
+  }
 }
