--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ pre{
   }
   /* Cursor End */
 
+
   p {
 	display: inline;
 	line-height: 1.3em;
@@ -168,7 +169,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: rgba(83, 83, 83, 0.4);
+  background: rgba(59, 73, 75, 0.4);
+  color: #D8D496;
   backdrop-filter: blur(50px);
   -webkit-backdrop-filter: blur(50px);
 }
@@ -189,7 +191,7 @@ body {
       display: flex;
       align-items: center;
       margin-left: 20px;
-      color: rgba(255, 255, 255, 0.95);
+      color: #D8D496;
       font-size: 14px;
     }
     .active {
@@ -260,7 +262,8 @@ body {
     align-items: center;
     justify-content: center;
     border-radius: 16px;
-    background: rgba(83, 83, 83, 0.25);
+    background: rgba(59, 73, 75, 0.4);
+    color: #D8D496;
     backdrop-filter: blur(13px);
     -webkit-backdrop-filter: blur(13px);
     border: 1px solid rgba(255, 255, 255, 0.18);
